prod/PrefixSuffixTransformer.yaml
---
apiVersion: builtin
kind: PrefixSuffixTransformer
metadata:
  name: host-prefix-suffix-transformer
prefix: "prod-"
suffix: ".kotimme.cc"
fieldSpecs:
- kind: Ingress
  path: spec/rules/host
---
apiVersion: builtin
kind: PrefixSuffixTransformer
metadata:
  name: host-prefix-suffix-transformer
prefix: "prod-"
fieldSpecs:
- kind: Ingress
  path: spec/tls/secretName
