prod/PrefixTransformer-secretName.yaml
---
apiVersion: builtin
kind: PrefixSuffixTransformer
metadata:
  name: PrefixTransformer-secretName
prefix: "prod-"
fieldSpecs:
- kind: Ingress
  path: spec/tls/secretName
