prod/ext-app-haproxy.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy
spec:
  tls:
  - secretName: haproxy-certs
    hosts:
    - haproxy.kotimme.cc
  rules:
  - host: haproxy.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: haproxy
            port:
              name: haproxy
---
apiVersion: v1
kind: Service
metadata:
    name: haproxy
spec:
    ports:
      - name: haproxy
        port: 80
        targetPort: haproxy
    type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: haproxy
subsets:
- addresses:
  - ip: 192.168.68.111
  ports:
  - name: haproxy
    port: 8404
    protocol: TCP
