prod/ext-app-omg433.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omg433
spec:
  tls:
  - secretName: omg433-certs
    hosts:
    - omg433.kotimme.cc
  rules:
  - host: omg433.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: omg433
            port:
              name: omg433
---
apiVersion: v1
kind: Service
metadata:
    name: omg433
spec:
    ports:
      - name: omg433
        port: 80
        targetPort: omg433
    type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: omg433
subsets:
- addresses:
  - ip: 192.168.68.138
  ports:
  - name: omg433
    port: 80
    protocol: TCP
