prod/ext-app-proxmox-backup-190.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox-backup-190
spec:
  tls:
  - secretName: proxmox-backup-190-certs
    hosts:
    - proxmox-backup-190.kotimme.cc
  rules:
  - host: proxmox-backup-190.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxmox-backup-190
            port:
              name: web
---
apiVersion: v1
kind: Service
metadata:
    name: proxmox-backup-190
spec:
    ports:
      - name: web
        port: 443
        targetPort: web
    type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-backup-190
subsets:
- addresses:
  - ip: 192.168.68.190
  ports:
  - name: web
    port: 8007
    protocol: TCP
