prod/ext-app-technitium.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technitium
spec:
  tls:
  - secretName: technitium-certs
    hosts:
    - technitium.kotimme.cc
  rules:
  - host: technitium.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: technitium
            port:
              name: technitium
---
apiVersion: v1
kind: Service
metadata:
    name: technitium
spec:
    ports:
      - name: technitium
        port: 80
        targetPort: technitium
    type: ClusterIP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: technitium
  labels:
    kubernetes.io/service-name: technitium
addressType: IPv4
ports:
  - name: technitium
    protocol: TCP
    port: 5380
endpoints:
  - addresses:
      - "192.168.68.111"
    conditions:
      ready: true
