prod/transformer-host.yaml
apiVersion: builtin
kind: PrefixSuffixTransformer
metadata:
  name: host-prefix-transformer
prefix: "kube-"
suffix: ".kotimme.cc"
fieldSpecs:
- kind: Ingress
  path: spec/rules/host
