prod/transformer-hosts.yaml
---
apiVersion: builtin
kind: PrefixSuffixTransformer
metadata:
  name: host-prefix-suffix-transformer
prefix: "prod-"
fieldSpecs:
- kind: Ingress
  path: spec/tls/secretName
